# agent-memory-benchmark

./: .gitignore  CLAUDE.md  LICENSE  README.md  openapi.yaml  pyproject.toml
.agent/: lessons.md  session-handoff.md
.claude/: launch.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  beam.md  compat.md  http-api.md
scripts/: port_predecessor_scorecard.py
src/agent_memory_benchmark/: __init__.py  __main__.py  compat.py  types.py  version.py
src/agent_memory_benchmark/adapters/: __init__.py  base.py  engram_adapter.py  factory.py  full_context.py  http_adapter.py  python_adapter.py
src/agent_memory_benchmark/cache/: __init__.py  index.py  keys.py  m3_guard.py
src/agent_memory_benchmark/cli/: __init__.py  baseline_cmd.py  cache_cmd.py  compare_cmd.py  main.py  rejudge_cmd.py  run_cmd.py  serve_cmd.py  summarize_cmd.py
src/agent_memory_benchmark/compat/: __init__.py  engram_shim.py
src/agent_memory_benchmark/datasets/: __init__.py  base.py  beam.py  locomo.py  longmemeval.py
src/agent_memory_benchmark/judge/: __init__.py  beam.py  locomo.py  longmemeval.py  prompts.py
src/agent_memory_benchmark/llm/: __init__.py  judge_client.py  ollama.py  openai.py
src/agent_memory_benchmark/results/: __init__.py  compare.py  render.py  scorecard.py
src/agent_memory_benchmark/runner/: __init__.py  judge_adapter.py  latest.py  (+2 more)
tests/unit/: test_adapters_base.py  test_adapters_engram.py  test_adapters_factory.py  test_adapters_full_context.py  test_adapters_python.py  test_beam_loader.py  test_cache_index.py  test_cache_keys.py  test_cache_m3_guard.py  test_cli_baseline_cmd.py  test_cli_cache_cmd.py  test_cli_compare_cmd.py  test_cli_main_dispatch.py  test_cli_rejudge_cmd.py  test_cli_run_cmd.py  test_cli_serve_cmd.py  test_cli_summarize_cmd.py  test_compat_engram_shim.py  test_compat_shape.py  test_http_adapter.py  test_judge_beam.py  test_judge_locomo.py  test_judge_longmemeval.py  test_judge_prompts_stable.py  test_llm_judge_client.py  test_llm_ollama.py  test_llm_openai.py  test_llm_spec.py  test_locomo_loader.py  test_longmemeval_loader.py  test_render_scorecard.py  test_results_compare.py  test_runner_judge_adapter.py  test_runner_latest.py  test_runner_manifest.py  test_runner_mapper_resolution.py  test_runner_orchestrator.py  test_scorecard.py  test_types.py  test_version.py  (+9 more)
(+19 files in other folders)
