[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-memory-benchmark"
version = "0.1.0"
description = "Benchmark suite for agent memory systems (LongMemEval, LOCOMO, BEAM)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ryan Tuosto", email = "ryantuosto@gmail.com" }]
keywords = ["benchmark", "memory", "llm", "longmemeval", "locomo", "beam"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "datasets>=2.19",
    "rich>=13.7",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
openai = ["openai>=1.40"]
tiktoken = ["tiktoken>=0.7"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "respx>=0.21",
]

[project.scripts]
agent-memory-benchmark = "agent_memory_benchmark.cli.main:main"
amb = "agent_memory_benchmark.cli.main:main"

[project.urls]
Homepage = "https://github.com/rtuosto/agent-memory-benchmark"
Issues = "https://github.com/rtuosto/agent-memory-benchmark/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_memory_benchmark"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = ["E501"]  # line-too-long handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]  # allow `assert False` in tests

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
